--- a/main/http_server/axe-os/src/app/pages/settings/settings.component.html
+++ b/main/http_server/axe-os/src/app/pages/settings/settings.component.html
@@ -64,7 +64,7 @@
           <span>{{ selectedRelease.published_at | date }}</span>
         </div>
         <div class="version-row" *ngIf="expectedFactoryFilename">
-          <strong>{{ 'UPDATE.EXPECTED_FILE' | translate }}:</strong>
+          <strong>{{ 'UPDATE.FILENAME' | translate }}:</strong>
           <span>{{ expectedFactoryFilename }}</span>
         </div>
       </div>
