--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -6,7 +6,7 @@
 <app-alert-banner
     *ngIf="!otpEnabled"
     storageKey="hideOtpNudge"
-    status="danger"
+    status="basic"
     [title]="'SECURITY.OTP_NUDGE_TITLE' | translate"
     [message]="'SECURITY.OTP_NUDGE_TEXT' | translate">
   </app-alert-banner>
