--- a/main/http_server/axe-os/src/app/components/alert-banner/alert-banner.component.html
+++ b/main/http_server/axe-os/src/app/components/alert-banner/alert-banner.component.html
@@ -2,20 +2,18 @@
     <nb-alert [status]="status" outline="danger" class="otp-nudge">
         <div class="banner-row">
             <div class="banner-text">
-                <div class="banner-title" *ngIf="title">{{ title }}</div>
-                <div class="banner-msg">{{ message }}</div>
+                <a href="/#/pages/security"><div class="banner-msg">{{ message }}</div></a>
             </div>
         </div>
-        <div class="banner-row">
+        <div class="banner-row" style="margin-top:10px;">
+            <button nbButton size="small" status="info" (click)="dismiss()">
+                Close
+            </button>
+
             <label class="dont-show">
                 <nb-checkbox [(ngModel)]="dontShowAgain"></nb-checkbox>
                 <span style="margin-left: .5rem; margin-top: -8px;">Don't show this again</span>
             </label>
-        </div>
-        <div class="banner-row">
-            <button nbButton size="small" status="danger" (click)="dismiss()">
-                Close
-            </button>
         </div>
     </nb-alert>
 </ng-container>
