fix mutex, rearranged web ui

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
@@ -171,6 +171,10 @@
 
     .btn-support { user-select: none; }
 
-
+    nb-tabset .form-label {
+        flex: 0 0 110px;
+        text-align: right;
+        margin-right: 16px;
+    }
 }
 
