--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -124,7 +124,8 @@
                     </nb-card-body>
                 </nb-tab>
 
-                <nb-tab [tabTitle]="'SETTINGS.FALLBACK_STRATUM_POOL' | translate">
+                <nb-tab
+                    [tabTitle]="((form?.get('poolMode')?.value === 1) ? 'SETTINGS.SECONDARY_STRATUM_POOL' : 'SETTINGS.FALLBACK_STRATUM_POOL'  ) | translate">
                     <nb-card-body>
                         <div class="form-row">
                             <label for="fallbackStratumURL" class="form-label">{{ 'SETTINGS.STRATUM_HOST' | translate
